--- a/src/app/features/presentation/product/product-updates/product-updates.component.html
+++ b/src/app/features/presentation/product/product-updates/product-updates.component.html
@@ -12,35 +12,69 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <a
-            [routerLink]="['/product-update']"
-            class="btn btn-primary btn-lg active justify-content-end"
-            role="button"
-            aria-pressed="true"
-            >Add Product</a
-          >
         </div>
         <div class="container">
-          <form>
+          <form
+            name="editForm"
+            role="form"
+            novalidate
+            (ngSubmit)="save()"
+            [formGroup]="editForm"
+          >
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
                   <input
                     type="text"
                     class="form-control form-control-alternative"
+                    name="productName"
                     id="productName"
-                    placeholder="productName"
+                    data-cy="productName"
+                    formControlName="productName"
+                    placeholder="Product Name"
                   />
+                  <div
+                    *ngIf="
+                      editForm.get('productName')!.invalid &&
+                      (editForm.get('productName')!.dirty ||
+                        editForm.get('productName')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('productName')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
+
               <div class="col-md-6">
                 <div class="form-group">
                   <input
                     type="text"
                     class="form-control form-control-alternative"
+                    name="description"
                     id="description"
-                    placeholder="description"
+                    data-cy="description"
+                    formControlName="description"
+                    placeholder="Description"
                   />
+                  <div
+                    *ngIf="
+                      editForm.get('description')!.invalid &&
+                      (editForm.get('description')!.dirty ||
+                        editForm.get('description')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('description')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
             </div>
@@ -50,19 +84,54 @@
                   <input
                     type="text"
                     class="form-control form-control-alternative"
+                    name="sku"
                     id="sku"
-                    placeholder="sku"
+                    data-cy="sku"
+                    formControlName="sku"
+                    placeholder="Sku"
                   />
+                  <div
+                    *ngIf="
+                      editForm.get('sku')!.invalid &&
+                      (editForm.get('sku')!.dirty ||
+                        editForm.get('sku')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('sku')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
+
               <div class="col-md-6">
                 <div class="form-group">
                   <input
                     type="text"
                     class="form-control form-control-alternative"
+                    name="size"
                     id="size"
-                    placeholder="size"
+                    data-cy="size"
+                    formControlName="size"
+                    placeholder="Size"
                   />
+                  <div
+                    *ngIf="
+                      editForm.get('size')!.invalid &&
+                      (editForm.get('size')!.dirty ||
+                        editForm.get('size')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('size')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
             </div>
@@ -72,32 +141,141 @@
                   <input
                     type="text"
                     class="form-control form-control-alternative"
+                    name="price"
                     id="price"
-                    placeholder="price"
+                    data-cy="price"
+                    formControlName="price"
+                    placeholder="Price"
                   />
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
+                  <label class="form-control-label" for="field_images"
+                    >Images</label
+                  >
+                  <div>
+                    <img
+                      [src]="
+                        'data:' +
+                        editForm.get('imagesContentType')!.value +
+                        ';base64,' +
+                        editForm.get('images')!.value
+                      "
+                      style="max-height: 100px"
+                      *ngIf="editForm.get('images')!.value"
+                      alt="post image"
+                    />
+                    <div
+                      *ngIf="editForm.get('images')!.value"
+                      class="form-text text-danger clearfix"
+                    >
+                      <span class="pull-left"
+                        >{{ editForm.get("imagesContentType")!.value }},
+                        {{ byteSize(editForm.get("images")!.value) }}</span
+                      >
+                      &nbsp;
+                      <img
+                        src="/assets/img/icons/close.svg"
+                        class="social-media-icon"
+                        alt=""
+                        (click)="
+                          clearInputImage(
+                            'images',
+                            'imagesContentType',
+                            'file_images'
+                          )
+                        "
+                      />
+                    </div>
+                    <input
+                      type="file"
+                      id="file_images"
+                      data-cy="images"
+                      (change)="setFileData($event, 'images', true)"
+                      accept="image/*"
+                    />
+                  </div>
                   <input
-                    class="form-control form-control-alternative"
-                    type="file"
-                    id="formFileMultiple"
-                    multiple
+                    type="hidden"
+                    class="form-control"
+                    name="images"
+                    id="field_images"
+                    data-cy="images"
+                    formControlName="images"
                   />
+                  <input
+                    type="hidden"
+                    class="form-control"
+                    name="imagesContentType"
+                    id="field_imagesContentType"
+                    formControlName="imagesContentType"
+                  />
+                  <div
+                    *ngIf="
+                      editForm.get('images')!.invalid &&
+                      (editForm.get('images')!.dirty ||
+                        editForm.get('images')!.touched)
+                    "
+                  >
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="editForm.get('images')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control form-control-alternative"
-                    id="category_product"
-                    placeholder="category_product"
-                  />
+                  <select
+                    style="height: 45px"
+                    class="form-control form-control-alternative form-select"
+                    id="field_category_product"
+                    data-cy="category_product"
+                    name="category_product"
+                    formControlName="category_product"
+                  >
+                    <option selected>Category</option>
+                    <option [ngValue]="null"></option>
+                    <option
+                      [ngValue]="
+                        categoryOption.name ===
+                        editForm.get('category_product')!.value?.name
+                          ? editForm.get('category_product')!.value
+                          : categoryOption
+                      "
+                      *ngFor="
+                        let categoryOption of categoriesSharedCollection;
+                        trackBy: trackCategoryById
+                      "
+                    >
+                      {{ categoryOption.name }}
+                    </option>
+                  </select>
                 </div>
               </div>
             </div>
+            <div>
+              <button
+                type="button"
+                id="cancel-save"
+                class="btn btn-secondary"
+                (click)="previousState()"
+              >
+                Cancel
+              </button>
+              <button
+                type="submit"
+                id="save-entity"
+                data-cy="entityCreateSaveButton"
+                class="btn btn-primary ml-3"
+              >
+                Save
+              </button>
+            </div>
+            &nbsp;
           </form>
         </div>
         <div class="card-footer py-4">
