--- a/src/app/features/presentation/product/product.component.html
+++ b/src/app/features/presentation/product/product.component.html
@@ -15,18 +15,22 @@
                 </div>
                 <div class="col-auto">
                   <div
-                    class="icon icon-shape
-                    bg-danger
-                    text-white
-                    rounded-circle
-                    shadow">
+                    class="
+                      icon icon-shape
+                      bg-danger
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-chart-bar"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i>
-                  3.48%</span>
+                <span class="text-success mr-2"
+                  ><i class="fa fa-arrow-up"></i> 3.48%</span
+                >
                 <span class="text-nowrap">Since last month</span>
               </p>
             </div>
@@ -44,18 +48,22 @@
                 </div>
                 <div class="col-auto">
                   <div
-                    class="icon icon-shape
-                    bg-warning
-                    text-white
-                    rounded-circle
-                    shadow">
+                    class="
+                      icon icon-shape
+                      bg-warning
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-chart-pie"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i>
-                  3.48%</span>
+                <span class="text-danger mr-2"
+                  ><i class="fas fa-arrow-down"></i> 3.48%</span
+                >
                 <span class="text-nowrap">Since last week</span>
               </p>
             </div>
@@ -73,18 +81,22 @@
                 </div>
                 <div class="col-auto">
                   <div
-                    class="icon icon-shape
-                    bg-yellow
-                    text-white
-                    rounded-circle
-                    shadow">
+                    class="
+                      icon icon-shape
+                      bg-yellow
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-users"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i>
-                  1.10%</span>
+                <span class="text-warning mr-2"
+                  ><i class="fas fa-arrow-down"></i> 1.10%</span
+                >
                 <span class="text-nowrap">Since yesterday</span>
               </p>
             </div>
@@ -102,18 +114,22 @@
                 </div>
                 <div class="col-auto">
                   <div
-                    class="icon icon-shape
-                    bg-info
-                    text-white
-                    rounded-circle
-                    shadow">
+                    class="
+                      icon icon-shape
+                      bg-info
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-percent"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i>
-                  12%</span>
+                <span class="text-success mr-2"
+                  ><i class="fas fa-arrow-up"></i> 12%</span
+                >
                 <span class="text-nowrap">Since last month</span>
               </p>
             </div>
@@ -134,45 +150,31 @@
             [routerLink]="['/product-update']"
             class="btn btn-success btn-lg active justify-content-end"
             role="button"
-            aria-pressed="true">Add Product</a>
+            aria-pressed="true"
+            >Add Product</a
+          >
         </div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
-              <tr>
+              <tr >
                 <th scope="col">Product Name</th>
                 <th scope="col">Description</th>
                 <th scope="col">Sku</th>
                 <th scope="col">Size</th>
                 <th scope="col">Price</th>
-                <th scope="col">Images</th>
                 <th scope="col">Category Product</th>
                 <th scope="col"></th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">
-                  <div class="media align-items-center">
-                    <a
-                      href="javascript:void(0)"
-                      class="avatar rounded-circle mr-3">
-                      <img
-                        alt="Image placeholder"
-                        src="../assets/img/theme/bootstrap.jpg"
-                        />
-                    </a>
-                    <div class="media-body">
-                      <span class="mb-0 text-sm">Argon Design System</span>
-                    </div>
-                  </div>
-                </th>
-                <td>Product</td>
-                <td>Product</td>
-                <td>Product</td>
-                <td>Product</td>
-                <td>Product</td>
-                <td>Product</td>
+              <tr *ngFor="let product of products">
+                <td>{{product.productName}}</td>
+                <td>{{product.description}}</td>
+                <td>{{product.sku}}</td>
+                <td>{{product.size}}</td>
+                <td>{{product.price}}</td>
+                <td>{{product.category_product?.name}}</td>
               </tr>
             </tbody>
           </table>
@@ -190,8 +192,9 @@
                 <a class="page-link" href="javascript:void(0)">1</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">2 <span
-                    class="sr-only">(current)</span></a>
+                <a class="page-link" href="javascript:void(0)"
+                  >2 <span class="sr-only">(current)</span></a
+                >
               </li>
               <li class="page-item">
                 <a class="page-link" href="javascript:void(0)">3</a>
