--- a/src/app/features/presentation/category/category-details/category-details.component.html
+++ b/src/app/features/presentation/category/category-details/category-details.component.html
@@ -1,1 +1,71 @@
-<p>category-details works!</p>
+<div class="header bg-gradient-green-y pb-8 pt-5 pt-md-8">
+  <div class="container-fluid">
+    <div class="header-body">
+      <!-- Card stats -->
+    </div>
+  </div>
+</div>
+<!-- Page content -->
+<div class="container-fluid mt--7">
+  <!-- Table -->
+  <div class="row">
+    <div class="col">
+      <div class="card shadow">
+        <div class="card-header border-0"></div>
+        <div class="container">
+          <form>
+            <div class="row" *ngIf="category">
+              <div class="col-md-6">
+                <dd>
+                  <span>{{ category.name }}</span>
+                </dd>
+              </div>
+            </div>
+            <div class="d-flex justify-content-end">
+              <button type="button" class="btn btn-warning">Cancel</button>
+              <button
+                type="button"
+                class="btn btn-success"
+                type="submit"
+                id="save-entity"
+                data-cy="entityCreateSaveButton"
+              >
+                Save
+              </button>
+            </div>
+            &nbsp;
+          </form>
+        </div>
+        <div class="card-footer py-4">
+          <nav aria-label="...">
+            <ul class="pagination justify-content-end mb-0">
+              <li class="page-item disabled">
+                <a class="page-link" href="javascript:void(0)" tabindex="-1">
+                  <i class="fas fa-angle-left"></i>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+              <li class="page-item active">
+                <a class="page-link" href="javascript:void(0)">1</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)"
+                  >2 <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)">3</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)">
+                  <i class="fas fa-angle-right"></i>
+                  <span class="sr-only">Next</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
