--- a/src/app/features/presentation/category/category-updates/category-updates.component.html
+++ b/src/app/features/presentation/category/category-updates/category-updates.component.html
@@ -23,6 +23,14 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
+          <input type="text" class="form-control" name="title" id="field_title" data-cy="title" formControlName="title" />
+          <div *ngIf="editForm.get('title')!.invalid && (editForm.get('title')!.dirty || editForm.get('title')!.touched)">
+            <small class="form-text text-danger" *ngIf="editForm.get('title')?.errors?.required"> This field is required. </small>
+          </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
                   <input
                     type="text"
                     class="form-control form-control-alternative"
