--- a/src/app/features/presentation/category/category.component.html
+++ b/src/app/features/presentation/category/category.component.html
@@ -8,19 +8,29 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">
+                    Traffic
+                  </h5>
                   <span class="h2 font-weight-bold mb-0">350,897</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-danger text-white
-                    rounded-circle shadow">
+                  <div
+                    class="
+                      icon icon-shape
+                      bg-danger
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-chart-bar"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i>
-                  3.48%</span>
+                <span class="text-success mr-2"
+                  ><i class="fa fa-arrow-up"></i> 3.48%</span
+                >
                 <span class="text-nowrap">Since last month</span>
               </p>
             </div>
@@ -31,20 +41,29 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">New
-                    users</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">
+                    New users
+                  </h5>
                   <span class="h2 font-weight-bold mb-0">2,356</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-warning text-white
-                    rounded-circle shadow">
+                  <div
+                    class="
+                      icon icon-shape
+                      bg-warning
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-chart-pie"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i>
-                  3.48%</span>
+                <span class="text-danger mr-2"
+                  ><i class="fas fa-arrow-down"></i> 3.48%</span
+                >
                 <span class="text-nowrap">Since last week</span>
               </p>
             </div>
@@ -55,19 +74,29 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">
+                    Sales
+                  </h5>
                   <span class="h2 font-weight-bold mb-0">924</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-yellow text-white
-                    rounded-circle shadow">
+                  <div
+                    class="
+                      icon icon-shape
+                      bg-yellow
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-users"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i>
-                  1.10%</span>
+                <span class="text-warning mr-2"
+                  ><i class="fas fa-arrow-down"></i> 1.10%</span
+                >
                 <span class="text-nowrap">Since yesterday</span>
               </p>
             </div>
@@ -78,19 +107,29 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">
+                    Performance
+                  </h5>
                   <span class="h2 font-weight-bold mb-0">49,65%</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle
-                    shadow">
+                  <div
+                    class="
+                      icon icon-shape
+                      bg-info
+                      text-white
+                      rounded-circle
+                      shadow
+                    "
+                  >
                     <i class="fas fa-percent"></i>
                   </div>
                 </div>
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i>
-                  12%</span>
+                <span class="text-success mr-2"
+                  ><i class="fas fa-arrow-up"></i> 12%</span
+                >
                 <span class="text-nowrap">Since last month</span>
               </p>
             </div>
@@ -107,33 +146,42 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <a [routerLink]="['/category-update']" class="btn btn-success btn-lg
-            active justify-content-end" role="button" aria-pressed="true">Add
-            Category</a>
+          <a
+            [routerLink]="['/category-update']"
+            class="btn btn-success btn-lg active justify-content-end"
+            role="button"
+            aria-pressed="true"
+            >Add Category</a
+          >
         </div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
+                <th scope="col">id</th>
                 <th scope="col">Category Name</th>
-                <th scope="col">Description</th>
                 <th scope="col"></th>
               </tr>
             </thead>
-            <tbody>
-              <tr *ngFor="let category of categories">
-
-                <td>
-                  {{ category.name }}
+            <tbody *ngIf="categories">
+              <tr
+                *ngFor="
+                  let category of categories;
+                  let i = index;
+                  trackBy: trackId
+                "
+              >
+                <td style="color: black">
+                  {{ category.id }}
                 </td>
-                <td>
-                 {{ category.description }}
+                <td style="color: black">
+                  {{ category?.name }}
                 </td>
                 <td class="text-right">
                   <div class="btn-group">
                     <button
                       type="submit"
-                      [routerLink]="['/post', post.id, 'view']"
+                      (click)="categoryDetailsRoute(category)"
                       class="btn btn-info btn-sm"
                       data-cy="entityDetailsButton"
                     >
@@ -143,7 +191,6 @@
 
                     <button
                       type="submit"
-                      [routerLink]="['/post', post.id, 'edit']"
                       class="btn btn-primary btn-sm"
                       data-cy="entityEditButton"
                     >
@@ -179,11 +226,13 @@
                 <a class="page-link" href="javascript:void(0)">1</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">2 <span
-                    class="sr-only">(current)</span></a>
+                <a class="page-link" href="javascript:void(0)"
+                  >2 <span class="sr-only">(current)</span></a
+                >
               </li>
-              <li class="page-item"><a class="page-link"
-                  href="javascript:void(0)">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)">3</a>
+              </li>
               <li class="page-item">
                 <a class="page-link" href="javascript:void(0)">
                   <i class="fas fa-angle-right"></i>
@@ -196,5 +245,4 @@
       </div>
     </div>
   </div>
-
 </div>
