--- a/src/app/features/presentation/clients/clients-details/clients-details.component.html
+++ b/src/app/features/presentation/clients/clients-details/clients-details.component.html
@@ -1,1 +1,43 @@
-<p>clients-details works!</p>
+<div class="header bg-gradient-green-y pb-8 pt-5 pt-md-8">
+  <div class="container-fluid">
+    <div class="header-body">
+      <!-- Card stats -->
+    </div>
+  </div>
+</div>
+<!-- Page content -->
+<div class="container-fluid mt--7">
+  <!-- Table -->
+  <div class="row">
+    <div class="col">
+      <div class="card shadow">
+        <div class="card-header border-0"></div>
+        <div class="container">
+          <form>
+            <div class="row" *ngIf="clients">
+              <div class="col-md-6">
+                <dd>
+                  <span>{{ clients.name }}</span>
+                </dd>
+              </div>
+            </div>
+            <div class="d-flex justify-content-end">
+              <button type="button" class="btn btn-warning">Cancel</button>
+              <button
+                type="button"
+                class="btn btn-success"
+                type="submit"
+                id="save-entity"
+                data-cy="entityCreateSaveButton"
+              >
+                Save
+              </button>
+            </div>
+            &nbsp;
+          </form>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
