--- a/src/app/features/presentation/clients/clients.component.html
+++ b/src/app/features/presentation/clients/clients.component.html
@@ -201,6 +201,7 @@
                       type="submit"
                       class="btn btn-info btn-sm"
                       data-cy="entityDetailsButton"
+                      (click)="clientsDetailsRoute(client)"
                     >
                       <fa-icon icon="eye"></fa-icon>
                       <span class="d-none d-md-inline">View</span>
@@ -210,6 +211,7 @@
                       type="submit"
                       class="btn btn-primary btn-sm"
                       data-cy="entityEditButton"
+
                     >
                       <fa-icon icon="pencil-alt"></fa-icon>
                       <span class="d-none d-md-inline">Edit</span>
