--- a/src/app/features/presentation/feedback/feedback.component.html
+++ b/src/app/features/presentation/feedback/feedback.component.html
@@ -167,7 +167,7 @@
             <tbody>
               <tr *ngFor="let f of feedback">
                 <td>
-                  {{ f.username }}
+                  {{ f.name }}
                 </td>
                 <td>
                   {{ f.email }}
@@ -181,6 +181,7 @@
                       type="submit"
                       class="btn btn-info btn-sm"
                       data-cy="entityDetailsButton"
+                      (click)="feedbackDetailsRoute(f)"
                     >
                       <fa-icon icon="eye"></fa-icon>
                       <span class="d-none d-md-inline">View</span>
