--- a/src/app/features/presentation/product/product.component.html
+++ b/src/app/features/presentation/product/product.component.html
@@ -181,6 +181,7 @@
                       type="submit"
                       class="btn btn-info btn-sm"
                       data-cy="entityDetailsButton"
+                      (click)="productDetailsRoute(product)"
                     >
                       <fa-icon icon="eye"></fa-icon>
                       <span class="d-none d-md-inline">View</span>
