--- a/src/app/features/presentation/category/category-details/category-details.component.html
+++ b/src/app/features/presentation/category/category-details/category-details.component.html
@@ -22,16 +22,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-end">
-              <button type="button" class="btn btn-warning">Cancel</button>
-              <button
-                type="button"
-                class="btn btn-success"
-                type="submit"
-                id="save-entity"
-                data-cy="entityCreateSaveButton"
-              >
-                Save
-              </button>
+              <button type="button" class="btn btn-warning" (click)="previousState()">Cancel</button>
             </div>
             &nbsp;
           </form>
