--- a/src/app/features/presentation/category/category.component.html
+++ b/src/app/features/presentation/category/category.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="header-body">
       <!-- Card stats -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
@@ -135,7 +135,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -147,7 +147,7 @@
       <div class="card shadow">
         <div class="card-header border-0">
           <a
-             [routerLink]="['/category-new']"
+            [routerLink]="['/category-new']"
             class="btn-sm btn-success btn-lg active justify-content-end"
             role="button"
             aria-pressed="true"
