--- a/src/app/features/presentation/feedback/feedback.component.html
+++ b/src/app/features/presentation/feedback/feedback.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="header-body">
       <!-- Card stats -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
@@ -135,7 +135,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -145,8 +145,7 @@
   <div class="row">
     <div class="col">
       <div class="card shadow">
-        <div class="card-header border-0">
-        </div>
+        <div class="card-header border-0"></div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
@@ -165,7 +164,7 @@
                 <td>
                   {{ f.email }}
                 </td>
-                <td>
+                <td class="hidden">
                   {{ f.messages }}
                 </td>
                 <td class="text-right">
